[Feat] 페이지 보완

--- a/src/main/resources/templates/BookCategoryHtml.html
+++ b/src/main/resources/templates/BookCategoryHtml.html
@@ -227,6 +227,10 @@
 
 <script src="/assets/js/newSidebar.js"></script>
 <script>
+    sessionStorage.setItem('IsCategory', "0");
+    type = 'NORMAL';
+    sessionStorage.setItem('Type', type);
+    sessionStorage.setItem('bookId', book.bookId);
 
     const selectedChildId = sessionStorage.getItem("selectedChildId");
     window.addEventListener('load', () => {
