--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -141,7 +141,7 @@
 
         <!-- 회원가입 | 비밀번호 찾기 링크 -->
         <div class="form-footer">
-            <a href="#">비밀번호 찾기</a> | <a href="/signup">회원가입</a>
+            <a href="/signup">회원가입</a>
         </div>
     </div>
 </div>
