[Feat] 페이지 보완

--- a/src/main/resources/templates/BookCategoryHtml.html
+++ b/src/main/resources/templates/BookCategoryHtml.html
@@ -227,11 +227,6 @@
 
 <script src="/assets/js/newSidebar.js"></script>
 <script>
-    sessionStorage.setItem('IsCategory', "0");
-    type = 'NORMAL';
-    sessionStorage.setItem('Type', type);
-    sessionStorage.setItem('bookId', book.bookId);
-
     const selectedChildId = sessionStorage.getItem("selectedChildId");
     window.addEventListener('load', () => {
         ListFavorBook(selectedChildId,"010");
@@ -300,7 +295,10 @@
 
             cardLink.addEventListener('click', function(e) {
                 e.preventDefault();
-                sessionStorage.setItem('Type', 'NORMAL');
+                sessionStorage.setItem('IsCategory', "0");
+                let type = 'NORMAL';
+                sessionStorage.setItem('Type', type);
+                sessionStorage.setItem('bookId', book.bookId);
 
                 const form = document.createElement('form');
                 form.method = 'GET';
